# SharpeBoost

./: .gitignore  LICENSE  README.md  __init__.py  data_collection.py  graphs.py  ideas.docx  metrics.py  models.py  pyproject.toml  run_on_data.py  trading.py  trainer.py
output/: sharpeboost_results_3way.csv
