[project]
name = "sharpeboost"
version = "0.0.1"
description = "Sharpe-gated boosting for financial prediction."
authors = [{name="Ivan Levchenko"}]
license = {text = "Apache-2.0"}
readme = "README.md"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "xgboost",
    "matplotlib"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
